--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "intl": "^1.2.5",
     "js-base64": "^2.4.9",
     "keymirror": "^0.1.1",
+    "lodash": "^4.17.21",
     "lodash.bindall": "^4.4.0",
     "lodash.debounce": "^4.0.8",
     "lodash.defaultsdeep": "^4.6.1",
